components/books/bases/calibre-web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  selector:
    app: calibre-web
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 8083
      targetPort: web
