components/books/bases/calibre-web/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
spec:
  ingressClassName: nginx-internal
  rules:
    - host: calibre-web.${INTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: calibre-web
                port:
                  number: 8083
